# picolua

./: CMakeLists.txt  LICENSE  README.md  autorun.h  autorun.lua  picolua.c
lua-5.4.6/src/: CMakeLists.txt  llex.c
